# ayon-maya

./: README.md  analyze_animation.py  datetime.txt  debug_usd_export.py  mkdocs.yml  package.py  pyproject.toml  ruff.toml  sample.txt  some_file.txt  versions.json
.github/workflows/: deploy_mkdocs.yml
0.4.17/: index.html  license.html
0.4.17/autoapi/: summary.html
0.4.17/search/: search_index.js  search_index.json
0.4.18/: 404.html  license.html  objects.inv
0.4.18/autoapi/: summary.html
0.4.18/search/: search_index.js  search_index.json
0.4.6/: 404.html  index.html  license.html  objects.inv
0.4.6/autoapi/: summary.html
0.4.6/search/: search_index.js  search_index.json
0.5.0/: index.html  objects.inv
0.5.0/autoapi/: summary.html
0.5.0/search/: search_index.js  search_index.json
0.5.1/: 404.html  index.html  license.html  objects.inv
0.5.1/autoapi/: summary.html
0.5.1/search/: search_index.js  search_index.json
0.5.2/: objects.inv
0.5.2/autoapi/: summary.html
0.5.2/search/: search_index.js  search_index.json
0.5.3/: 404.html  index.html  license.html  objects.inv
0.5.3/autoapi/: summary.html
0.5.3/search/: search_index.js  search_index.json
0.5.4/: 404.html  index.html
0.5.4/autoapi/: summary.html
0.5.4/search/: search_index.js  search_index.json
0.6.0/: license.html
0.6.0/autoapi/: summary.html
0.6.0/search/: search_index.js  search_index.json
0.6.1/: 404.html  index.html  license.html
0.6.1/autoapi/: summary.html
0.6.1/search/: search_index.js  search_index.json
0.6.2/: 404.html  index.html  license.html
0.6.2/autoapi/: summary.html
0.6.3/: objects.inv
0.6.4/: index.html  objects.inv
0.6.5/: 404.html  license.html
0.6.5/autoapi/: summary.html
server/: __init__.py
test-build/: 404.html  objects.inv
(+3972 files in other folders)
